@@ -1,0 +1,33 @@
+//
+//  SearchPanel.h
+//  Vienna
+//
+//  Created by Steve on Sat Jul 14 2007.
+//  Copyright (c) 2004-2007 Steve Palmer. All rights reserved.
+//
+//  Licensed under the Apache License, Version 2.0 (the "License");
+//  you may not use this file except in compliance with the License.
+//  You may obtain a copy of the License at
+//
+//  http://www.apache.org/licenses/LICENSE-2.0
+//
+//  Unless required by applicable law or agreed to in writing, software
+//  distributed under the License is distributed on an "AS IS" BASIS,
+//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+//  See the License for the specific language governing permissions and
+//  limitations under the License.
+//
+
+#import <Cocoa/Cocoa.h>
+
+@interface SearchPanel : NSWindowController
+{
+	IBOutlet NSWindow * searchPanelWindow;
+    IBOutlet NSSearchField * searchField;
+	IBOutlet NSTextField * searchLabel;
+}
+
+// Public functions
+-(IBAction)searchStringChanged:(id)sender;
+-(void)runSearchPanel:(NSWindow *)window;
+@end
